# oxihuman

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  oxihuman.md
crates/oxihuman/: Cargo.toml  README.md  TODO.md
crates/oxihuman-cli/: Cargo.toml  README.md  TODO.md
crates/oxihuman-cli/src/: help.rs  lib.rs  main.rs  utils.rs
crates/oxihuman-cli/tests/: e2e_tests.rs  unit_tests.rs
crates/oxihuman-core/: Cargo.toml  README.md  TODO.md
crates/oxihuman-core/benches/: core_bench.rs
crates/oxihuman-core/src/: _core_part1.rs  _core_part2.rs  _core_part3.rs  aabb_tree.rs  aabb_tree_2d.rs  ab_test_config.rs  access_map.rs  action_map.rs  action_recorder.rs  adjacency_map.rs  aggregate_root.rs  aggregator.rs  aho_corasick.rs  aho_corasick_stub.rs  angle_utils.rs  animation_curve.rs  anomaly_scorer.rs  append_list.rs  archive_reader.rs  archive_writer.rs  arena_alloc_stub.rs  arena_allocator.rs  arena_pool.rs  arena_str.rs  arena_string.rs  argument_parser.rs  arithmetic_coding.rs  array_pool.rs  array_stack.rs  asset_cache.rs  asset_cache_ttl.rs  asset_hash.rs  asset_pack_builder.rs  asset_registry.rs  asset_version.rs  async_queue.rs  async_signal.rs  atomic_counter.rs  atomic_counter_stub.rs  audit_log.rs  (+800 more)
crates/oxihuman-core/tests/: proptest_core.rs
crates/oxihuman-export/: Cargo.toml  README.md  TODO.md
crates/oxihuman-export/benches/: export_bench.rs
crates/oxihuman-export/src/: _export_part1.rs  _export_part2.rs  _export_part3.rs  _export_part4.rs  _export_part5.rs  _export_part6.rs  a_frame_export.rs  aaf_export.rs  abc_export.rs  abc_notation_export.rs  abc_pointcloud_export.rs  ac3d_export.rs  aces_export.rs  action_export.rs  age_spot_export.rs  alembic_export.rs  alembic_ogawa_core.rs  alembic_ogawa_export.rs  alembic_ogawa_io.rs  alembic_stub.rs  alpha_map_export.rs  amf_export.rs  amqp_export.rs  anim_clip_blend_export.rs  anim_clip_export2.rs  anim_drivers_export.rs  anim_event_export.rs  anim_notify_export.rs  anim_retarget_export.rs  anim_state_export.rs  animated_glb.rs  animation.rs  animation_channel_export.rs  animation_clip_export.rs  animation_clip_export2.rs  animation_curve_export.rs  animation_event_export.rs  animation_export.rs  animation_layer_export.rs  animation_node_export.rs  (+843 more)
crates/oxihuman-export/tests/: export_integration.rs
crates/oxihuman-mesh/: Cargo.toml  README.md  TODO.md
crates/oxihuman-mesh/benches/: mesh_bench.rs
crates/oxihuman-mesh/src/: adaptive_subdivide.rs  ao_bake.rs  atlas.rs  bounds.rs  bvh.rs  catmull_clark.rs  cloth_panel.rs  cloth_sim.rs  clothing.rs  color_utils.rs  connectivity.rs  convex_hull.rs  curvature.rs  decimate.rs  displacement_map.rs  dqs.rs  edge_loops.rs  feature_decimation.rs  ffd.rs  geodesic.rs  groups.rs  hair_cards.rs  heat_map.rs  ik.rs  integrity.rs  lib.rs  lod.rs  marching_cubes.rs  measurements.rs  mesh.rs  mesh_aabb_tree.rs  mesh_adaptive_lod.rs  mesh_adaptive_remesh.rs  mesh_adaptive_remesh_v2.rs  mesh_adaptive_subdiv_v2.rs  mesh_adaptive_subdivision.rs  mesh_adjacency_list.rs  mesh_align.rs  mesh_align_axes.rs  mesh_align_vertices.rs  (+858 more)
crates/oxihuman-mesh/tests/: proptest_mesh.rs
crates/oxihuman-morph/: Cargo.toml  README.md  TODO.md
crates/oxihuman-morph/benches/: morph_bench.rs
crates/oxihuman-morph/src/: _morph_part1.rs  _morph_part2.rs  _morph_part3.rs  _morph_part4.rs  _morph_part5.rs  _morph_part6.rs  abdomen_control.rs  abdomen_expand_morph.rs  abdomen_morph.rs  acne_morph.rs  adam_apple_control.rs  adolescent_morph.rs  age_model.rs  age_morph.rs  age_progression.rs  age_progression_adv.rs  age_progression_morph.rs  alar_base_control.rs  alar_base_morph.rs  android_proportion.rs  anim_retarget.rs  animation_layer.rs  ankle_control.rs  ankle_shape_control.rs  ankle_shape_morph.rs  anthropometric_constraints.rs  anthropometry.rs  apple_shape_morph.rs  apply.rs  arch_control.rs  arch_height_control.rs  areola_control.rs  arm_control.rs  arm_hair_morph.rs  arm_muscle_morph.rs  arytenoid_morph.rs  asymmetry_morph.rs  athletic_build_morph.rs  back_control.rs  back_muscle_morph.rs  (+878 more)
crates/oxihuman-morph/tests/: proptest_morph.rs
crates/oxihuman-physics/: Cargo.toml  README.md  TODO.md
crates/oxihuman-physics/benches/: accuracy_bench.rs  physics_bench.rs
crates/oxihuman-physics/src/: acoustic_impedance.rs  acoustic_wave.rs  actuator_ball_screw.rs  actuator_body.rs  actuator_cable_drive.rs  actuator_dc_motor.rs  actuator_differential.rs  actuator_gear_train.rs  actuator_harmonic_drive.rs  actuator_hydraulic.rs  actuator_linear_motor.rs  actuator_parallel_robot.rs  actuator_pneumatic.rs  actuator_rack_pinion.rs  actuator_servo.rs  actuator_soft_robot.rs  actuator_stepper.rs  actuator_tendon_drive.rs  actuator_worm_gear.rs  adhesion_force.rs  adhesion_model.rs  adipose_sim.rs  advection_model.rs  aerial_body.rs  aero_rigid_body.rs  aerodynamics.rs  air_resistance.rs  anchor_constraint.rs  angular_constraint.rs  angular_limit.rs  angular_momentum_body.rs  angular_motor.rs  angular_spring.rs  angular_velocity.rs  angular_velocity_body.rs  anisotropic_material.rs  anisotropic_spring.rs  articulated_body.rs  articulation_tree.rs  atmosphere_body.rs  (+808 more)
crates/oxihuman-physics/tests/: physics_integration.rs
crates/oxihuman-tests/: Cargo.toml  README.md  TODO.md
crates/oxihuman-tests/src/: lib.rs
crates/oxihuman-tests/tests/: integration_tests.rs
crates/oxihuman-viewer/: Cargo.toml  README.md  TODO.md
crates/oxihuman-viewer/benches/: viewer_bench.rs
crates/oxihuman-viewer/src/: _mods_part1.rs  _mods_part2.rs  _mods_part3.rs  _mods_part4.rs  acceleration_view.rs  action_clip_view.rs  albedo_view.rs  alpha_blend.rs  alpha_coverage.rs  alpha_discard.rs  alpha_premult.rs  alpha_sort.rs  alpha_threshold.rs  ambient_occlusion.rs  ambient_occlusion_preview.rs  ambient_occlusion_v2.rs  ambient_occlusion_view.rs  annotation.rs  (+853 more)
crates/oxihuman-wasm/: Cargo.toml  README.md  TODO.md  wasm-opt.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_glb_reader.rs  fuzz_mesh_normals.rs  fuzz_morph_params.rs  fuzz_oxp_reader.rs  fuzz_target_parser.rs  fuzz_usda_write.rs
(+80 files in other folders)
